[workspace]
members = [
    "data_service",
    "ws_client"
]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
data-service = { path = "data_service" }
futures = "0.3"
futures-util = "0.3.31"
rand = "0.9.1"
rust_decimal = { version = "1.33", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
