[package]
name = "ws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
data-service = { workspace = true }
serde = { workspace = true }